Added folder as source option (#40)